# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/third_party/abseil-cpp/absl.gni")

absl_source_set("random") {
  public = [ "random.h" ]
  deps = [
    ":distributions",
    ":seed_sequences",
    "//flutter/third_party/abseil-cpp/absl/random/internal:nonsecure_base",
    "//flutter/third_party/abseil-cpp/absl/random/internal:pcg_engine",
    "//flutter/third_party/abseil-cpp/absl/random/internal:pool_urbg",
    "//flutter/third_party/abseil-cpp/absl/random/internal:randen_engine",
  ]
}

absl_source_set("distributions") {
  public = [
    "bernoulli_distribution.h",
    "beta_distribution.h",
    "discrete_distribution.h",
    "distributions.h",
    "exponential_distribution.h",
    "gaussian_distribution.h",
    "log_uniform_int_distribution.h",
    "poisson_distribution.h",
    "uniform_int_distribution.h",
    "uniform_real_distribution.h",
    "zipf_distribution.h",
  ]
  sources = [
    "discrete_distribution.cc",
    "gaussian_distribution.cc",
  ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:base_internal",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
    "//flutter/third_party/abseil-cpp/absl/numeric:bits",
    "//flutter/third_party/abseil-cpp/absl/random/internal:distribution_caller",
    "//flutter/third_party/abseil-cpp/absl/random/internal:fast_uniform_bits",
    "//flutter/third_party/abseil-cpp/absl/random/internal:fastmath",
    "//flutter/third_party/abseil-cpp/absl/random/internal:generate_real",
    "//flutter/third_party/abseil-cpp/absl/random/internal:iostream_state_saver",
    "//flutter/third_party/abseil-cpp/absl/random/internal:traits",
    "//flutter/third_party/abseil-cpp/absl/random/internal:uniform_helper",
    "//flutter/third_party/abseil-cpp/absl/random/internal:wide_multiply",
    "//flutter/third_party/abseil-cpp/absl/strings",
  ]
}

absl_source_set("seed_gen_exception") {
  public = [ "seed_gen_exception.h" ]
  sources = [ "seed_gen_exception.cc" ]
  deps = [ "//flutter/third_party/abseil-cpp/absl/base:config" ]
}

absl_source_set("seed_sequences") {
  public = [ "seed_sequences.h" ]
  sources = [ "seed_sequences.cc" ]
  deps = [
    ":seed_gen_exception",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:nullability",
    "//flutter/third_party/abseil-cpp/absl/random/internal:pool_urbg",
    "//flutter/third_party/abseil-cpp/absl/random/internal:salted_seed_seq",
    "//flutter/third_party/abseil-cpp/absl/random/internal:seed_material",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/types:span",
  ]
}

absl_source_set("bit_gen_ref") {
  public = [ "bit_gen_ref.h" ]
  deps = [
    ":random",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:fast_type_id",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
    "//flutter/third_party/abseil-cpp/absl/random/internal:distribution_caller",
    "//flutter/third_party/abseil-cpp/absl/random/internal:fast_uniform_bits",
  ]
}
