# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")
import("//flutter/third_party/abseil-cpp/absl.gni")

absl_source_set("any") {
  public = [ "any.h" ]
  public_deps = [
    ":bad_any_cast",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:fast_type_id",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
    "//flutter/third_party/abseil-cpp/absl/utility",
  ]
}

absl_source_set("bad_any_cast") {
  public = [ "bad_any_cast.h" ]
  deps = [ ":bad_any_cast_impl" ]
  public_deps = [ "//flutter/third_party/abseil-cpp/absl/base:config" ]
}

absl_source_set("bad_any_cast_impl") {
  sources = [ "bad_any_cast.cc" ]
  public = [ "bad_any_cast.h" ]
  public_deps = [ "//flutter/third_party/abseil-cpp/absl/base:config" ]
  deps = [ "//flutter/third_party/abseil-cpp/absl/base:raw_logging_internal" ]
  visibility = [ ":*" ]
}

absl_source_set("span") {
  public = [ "span.h" ]
  sources = [ "internal/span.h" ]
  public_deps = [
    "//flutter/third_party/abseil-cpp/absl/algorithm",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:nullability",
    "//flutter/third_party/abseil-cpp/absl/base:throw_delegate",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
  ]
}

absl_source_set("optional") {
  sources = [ "internal/optional.h" ]
  public = [ "optional.h" ]
  public_deps = [
    ":bad_optional_access",
    "//flutter/third_party/abseil-cpp/absl/base:base_internal",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:nullability",
    "//flutter/third_party/abseil-cpp/absl/memory",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
    "//flutter/third_party/abseil-cpp/absl/utility",
  ]
}

absl_source_set("bad_optional_access") {
  sources = [ "bad_optional_access.cc" ]
  public = [ "bad_optional_access.h" ]
  public_deps = [ "//flutter/third_party/abseil-cpp/absl/base:config" ]
  deps = [ "//flutter/third_party/abseil-cpp/absl/base:raw_logging_internal" ]
}

absl_source_set("bad_variant_access") {
  sources = [ "bad_variant_access.cc" ]
  public = [ "bad_variant_access.h" ]
  public_deps = [ "//flutter/third_party/abseil-cpp/absl/base:config" ]
  deps = [ "//flutter/third_party/abseil-cpp/absl/base:raw_logging_internal" ]
}

absl_source_set("variant") {
  sources = [ "internal/variant.h" ]
  public = [ "variant.h" ]
  public_deps = [
    ":bad_variant_access",
    "//flutter/third_party/abseil-cpp/absl/base:base_internal",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
    "//flutter/third_party/abseil-cpp/absl/utility",
  ]
}

absl_source_set("compare") {
  public = [ "compare.h" ]
  public_deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
  ]
}

absl_test("optional_test") {
  sources = [ "optional_test.cc" ]
  deps = [
    ":optional",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/log",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
  ]
}

absl_test("variant_test") {
  sources = [ "variant_test.cc" ]
  deps = [
    ":variant",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/memory",
    "//flutter/third_party/abseil-cpp/absl/meta:type_traits",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
  ]
}
