# Copyright 2022 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/third_party/abseil-cpp/absl.gni")

absl_source_set("check_impl") {
  public = [ "check_impl.h" ]
  deps = [
    ":check_op",
    ":conditions",
    ":log_message",
    ":strip",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
  ]
}

absl_source_set("check_op") {
  sources = [ "check_op.cc" ]
  public = [ "check_op.h" ]
  deps = [
    ":nullguard",
    ":nullstream",
    ":strip",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/strings",
  ]
}

absl_source_set("conditions") {
  sources = [ "conditions.cc" ]
  public = [ "conditions.h" ]
  deps = [
    ":voidify",
    "//flutter/third_party/abseil-cpp/absl/base",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
  ]
}

absl_source_set("config") {
  public = [ "config.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
  ]
}

absl_source_set("flags") {
  public = [ "flags.h" ]
  deps = [ "//flutter/third_party/abseil-cpp/absl/flags:flag" ]
}

absl_source_set("format") {
  sources = [ "log_format.cc" ]
  public = [ "log_format.h" ]
  deps = [
    ":append_truncated",
    ":config",
    ":globals",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/strings",
    "//flutter/third_party/abseil-cpp/absl/strings:str_format",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/time",
    "//flutter/third_party/abseil-cpp/absl/types:span",
  ]
}

absl_source_set("globals") {
  sources = [ "globals.cc" ]
  public = [ "globals.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/base:raw_logging_internal",
    "//flutter/third_party/abseil-cpp/absl/strings",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/time",
  ]
}

absl_source_set("log_impl") {
  public = [ "log_impl.h" ]
  deps = [
    ":conditions",
    ":log_message",
    ":strip",
    "//flutter/third_party/abseil-cpp/absl/log:absl_vlog_is_on",
  ]
}

absl_source_set("log_message") {
  sources = [ "log_message.cc" ]
  public = [ "log_message.h" ]
  deps = [
    ":append_truncated",
    ":format",
    ":globals",
    ":log_sink_set",
    ":nullguard",
    ":proto",
    "//flutter/third_party/abseil-cpp/absl/base",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:errno_saver",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/base:raw_logging_internal",
    "//flutter/third_party/abseil-cpp/absl/base:strerror",
    "//flutter/third_party/abseil-cpp/absl/container:inlined_vector",
    "//flutter/third_party/abseil-cpp/absl/debugging:examine_stack",
    "//flutter/third_party/abseil-cpp/absl/log:globals",
    "//flutter/third_party/abseil-cpp/absl/log:log_entry",
    "//flutter/third_party/abseil-cpp/absl/log:log_sink",
    "//flutter/third_party/abseil-cpp/absl/log:log_sink_registry",
    "//flutter/third_party/abseil-cpp/absl/memory",
    "//flutter/third_party/abseil-cpp/absl/strings",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/time",
    "//flutter/third_party/abseil-cpp/absl/types:span",
  ]
}

absl_source_set("append_truncated") {
  public = [ "append_truncated.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/types:span",
  ]
}

absl_source_set("log_sink_set") {
  sources = [ "log_sink_set.cc" ]
  public = [ "log_sink_set.h" ]
  deps = [
    ":config",
    ":globals",
    "//flutter/third_party/abseil-cpp/absl/base",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/base:no_destructor",
    "//flutter/third_party/abseil-cpp/absl/base:raw_logging_internal",
    "//flutter/third_party/abseil-cpp/absl/cleanup",
    "//flutter/third_party/abseil-cpp/absl/log:globals",
    "//flutter/third_party/abseil-cpp/absl/log:log_entry",
    "//flutter/third_party/abseil-cpp/absl/log:log_sink",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/synchronization",
    "//flutter/third_party/abseil-cpp/absl/types:span",
  ]
  if (is_android) {
    libs = [ "log" ]
  }
}

absl_source_set("nullguard") {
  sources = [ "nullguard.cc" ]
  public = [ "nullguard.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
  ]
}

absl_source_set("nullstream") {
  public = [ "nullstream.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
  ]
}

absl_source_set("strip") {
  public = [ "strip.h" ]
  deps = [
    ":log_message",
    ":nullstream",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
  ]
}

absl_source_set("structured") {
  public = [ "structured.h" ]
  deps = [
    ":log_message",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
  ]
}

absl_source_set("test_actions") {
  testonly = true
  sources = [ "test_actions.cc" ]
  public = [ "test_actions.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/log:log_entry",
    "//flutter/third_party/abseil-cpp/absl/strings",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/time",
  ]
}

absl_source_set("test_helpers") {
  testonly = true
  sources = [ "test_helpers.cc" ]
  public = [ "test_helpers.h" ]
  deps = [
    ":globals",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/log:globals",
    "//flutter/third_party/abseil-cpp/absl/log:initialize",
    "//third_party/googletest:gtest",
  ]
}

absl_source_set("test_matchers") {
  testonly = true
  sources = [ "test_matchers.cc" ]
  public = [ "test_matchers.h" ]
  deps = [
    ":test_helpers",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/log:log_entry",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/time",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]
}

absl_source_set("voidify") {
  public = [ "voidify.h" ]
  deps = [ "//flutter/third_party/abseil-cpp/absl/base:config" ]
}

absl_source_set("proto") {
  sources = [ "proto.cc" ]
  public = [ "proto.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/strings:string_view",
    "//flutter/third_party/abseil-cpp/absl/types:span",
  ]
}

absl_source_set("fnmatch") {
  sources = [ "fnmatch.cc" ]
  public = [ "fnmatch.h" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/strings",
  ]
}

absl_source_set("vlog_config") {
  sources = [ "vlog_config.cc" ]
  public = [ "vlog_config.h" ]
  visibility = [ "//flutter/third_party/abseil-cpp/absl/log/*" ]
  deps = [
    "//flutter/third_party/abseil-cpp/absl/base",
    "//flutter/third_party/abseil-cpp/absl/base:config",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:no_destructor",
    "//flutter/third_party/abseil-cpp/absl/log/internal:fnmatch",
    "//flutter/third_party/abseil-cpp/absl/memory",
    "//flutter/third_party/abseil-cpp/absl/strings",
    "//flutter/third_party/abseil-cpp/absl/synchronization",
    "//flutter/third_party/abseil-cpp/absl/types:optional",
  ]
}

absl_test("stderr_log_sink_test") {
  sources = [ "stderr_log_sink_test.cc" ]
  if (is_apple || is_android) {
    sources = []
  }
  deps = [
    ":test_helpers",
    "//flutter/third_party/abseil-cpp/absl/base:core_headers",
    "//flutter/third_party/abseil-cpp/absl/base:log_severity",
    "//flutter/third_party/abseil-cpp/absl/log",
    "//flutter/third_party/abseil-cpp/absl/log:globals",
  ]
}

absl_test("fnmatch_test") {
  sources = [ "fnmatch_test.cc" ]
  deps = [ ":fnmatch" ]
}
